--- a/src/SmartHire.form
+++ b/src/SmartHire.form
@@ -2,14 +2,14 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="SmartHire">
   <grid id="27dc6" binding="SmartHireHub" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="830" height="600"/>
+      <xy x="20" y="20" width="800" height="600"/>
     </constraints>
     <properties>
       <preferredSize width="800" height="600"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="2bdde" binding="mainPanel" layout-manager="CardLayout" hgap="0" vgap="0" show="41503">
+      <grid id="2bdde" binding="mainPanel" layout-manager="CardLayout" hgap="0" vgap="0">
         <constraints border-constraint="Center"/>
         <properties/>
         <border type="none"/>
@@ -22,7 +22,7 @@
               <background color="-3290691"/>
               <foreground color="-3290691"/>
               <name value="login"/>
-              <preferredSize width="800" height="480"/>
+              <preferredSize width="800" height="510"/>
             </properties>
             <border type="etched"/>
             <children>
@@ -107,7 +107,7 @@
             <properties>
               <background color="-3290691"/>
               <name value="create"/>
-              <preferredSize width="800" height="480"/>
+              <preferredSize width="800" height="510"/>
             </properties>
             <border type="none"/>
             <children>
@@ -158,7 +158,7 @@
               </component>
               <grid id="75139" binding="avatarPanel" layout-manager="GridBagLayout">
                 <constraints>
-                  <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                   <gridbag top="0" left="0" bottom="5" right="0" weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties/>
@@ -289,7 +289,7 @@
               </grid>
               <component id="c3f71" class="javax.swing.JButton" binding="createBtn">
                 <constraints>
-                  <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="4" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                   <gridbag top="2" left="0" bottom="2" right="0" weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties>
@@ -306,7 +306,7 @@
             <properties>
               <background color="-3290691"/>
               <name value="rules"/>
-              <preferredSize width="800" height="480"/>
+              <preferredSize width="800" height="510"/>
             </properties>
             <border type="none"/>
             <children>
@@ -357,6 +357,7 @@
             </constraints>
             <properties>
               <name value="questions"/>
+              <preferredSize width="800" height="510"/>
             </properties>
             <border type="none"/>
             <children>
@@ -372,27 +373,17 @@
                 <children>
                   <component id="7a38b" class="javax.swing.JLabel" binding="photoLbl">
                     <constraints>
-                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
                       <gridbag top="10" left="0" bottom="10" right="0" weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
-                      <preferredSize width="250" height="250"/>
-                      <text value=""/>
-                    </properties>
-                  </component>
-                  <component id="7436b" class="javax.swing.JLabel" binding="questionLbl">
-                    <constraints>
-                      <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                      <gridbag top="5" left="0" bottom="5" right="0" weightx="0.0" weighty="0.0"/>
-                    </constraints>
-                    <properties>
-                      <preferredSize width="500" height="35"/>
+                      <preferredSize width="300" height="275"/>
                       <text value=""/>
                     </properties>
                   </component>
                   <component id="e366f" class="javax.swing.JProgressBar" binding="progressBar">
                     <constraints>
-                      <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
@@ -406,10 +397,12 @@
                   </component>
                   <grid id="11c1d" layout-manager="GridBagLayout">
                     <constraints>
-                      <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
                     </constraints>
-                    <properties/>
+                    <properties>
+                      <preferredSize width="500" height="60"/>
+                    </properties>
                     <border type="none"/>
                     <children>
                       <component id="1ba30" class="javax.swing.JRadioButton" binding="aLbl">
@@ -423,7 +416,7 @@
                           <horizontalTextPosition value="11"/>
                           <inheritsPopupMenu value="false"/>
                           <margin top="5" left="5" bottom="5" right="5"/>
-                          <preferredSize width="200" height="30"/>
+                          <preferredSize width="250" height="30"/>
                           <text value="Testing text for answer a"/>
                         </properties>
                       </component>
@@ -441,7 +434,7 @@
                         <properties>
                           <font size="14"/>
                           <margin top="5" left="5" bottom="5" right="5"/>
-                          <preferredSize width="200" height="30"/>
+                          <preferredSize width="250" height="30"/>
                           <text value="Testing text for answer b"/>
                         </properties>
                       </component>
@@ -453,7 +446,7 @@
                         <properties>
                           <font size="14"/>
                           <margin top="5" left="5" bottom="5" right="5"/>
-                          <preferredSize width="200" height="30"/>
+                          <preferredSize width="250" height="30"/>
                           <text value="Testing text for answer c"/>
                         </properties>
                       </component>
@@ -465,12 +458,31 @@
                         <properties>
                           <font size="14"/>
                           <margin top="5" left="5" bottom="5" right="5"/>
-                          <preferredSize width="200" height="30"/>
+                          <preferredSize width="250" height="30"/>
                           <text value="Testing text for answer d"/>
                         </properties>
                       </component>
                     </children>
                   </grid>
+                  <component id="b08ad" class="javax.swing.JTextArea" binding="testingQuestionTextForTextArea" default-binding="true">
+                    <constraints>
+                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="50"/>
+                      </grid>
+                      <gridbag weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <background color="-3290691"/>
+                      <columns value="0"/>
+                      <editable value="false"/>
+                      <font size="16" style="1"/>
+                      <lineWrap value="true"/>
+                      <preferredSize width="400" height="60"/>
+                      <rows value="0"/>
+                      <text value=""/>
+                      <wrapStyleWord value="true"/>
+                    </properties>
+                  </component>
                 </children>
               </grid>
             </children>
@@ -482,59 +494,16 @@
             <properties>
               <background color="-3290691"/>
               <name value="results"/>
-              <preferredSize width="800" height="480"/>
+              <preferredSize width="800" height="510"/>
             </properties>
             <border type="none"/>
             <children>
-              <grid id="3924c" layout-manager="BorderLayout" hgap="0" vgap="0">
-                <constraints border-constraint="North"/>
-                <properties>
-                  <background color="-3290691"/>
-                  <preferredSize width="585" height="44"/>
-                </properties>
-                <border type="none"/>
-                <children>
-                  <grid id="8cbcb" binding="leaderboardPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
-                    <constraints border-constraint="East"/>
-                    <properties>
-                      <background color="-1041"/>
-                    </properties>
-                    <border type="none"/>
-                    <children>
-                      <component id="9aa6f" class="javax.swing.JButton" binding="leaderboardBtn">
-                        <constraints/>
-                        <properties>
-                          <background color="-7751195"/>
-                          <enabled value="true"/>
-                          <horizontalTextPosition value="0"/>
-                          <icon value="icons/Leader cup 34x50.png"/>
-                          <preferredSize width="100" height="34"/>
-                          <text value=""/>
-                          <toolTipText value="Leaderboard"/>
-                          <verifyInputWhenFocusTarget value="false"/>
-                        </properties>
-                      </component>
-                      <component id="586ea" class="javax.swing.JButton" binding="printToFileBtn">
-                        <constraints/>
-                        <properties>
-                          <background color="-7751195"/>
-                          <enabled value="true"/>
-                          <horizontalTextPosition value="0"/>
-                          <icon value="icons/printer1 34x36.png"/>
-                          <preferredSize width="100" height="34"/>
-                          <text value=""/>
-                          <toolTipText value="Print Results"/>
-                        </properties>
-                      </component>
-                    </children>
-                  </grid>
-                </children>
-              </grid>
               <grid id="317b8" binding="resultBG" layout-manager="GridBagLayout">
                 <constraints border-constraint="Center"/>
                 <properties>
                   <background color="-3290691"/>
                   <enabled value="false"/>
+                  <preferredSize width="800" height="510"/>
                 </properties>
                 <border type="none"/>
                 <children>
@@ -655,7 +624,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="77a39" binding="settingsPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+          <grid id="77a39" binding="iconPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="2">
             <constraints border-constraint="East"/>
             <properties>
               <background color="-1041"/>
@@ -663,6 +632,19 @@
             </properties>
             <border type="none"/>
             <children>
+              <component id="586ea" class="javax.swing.JButton" binding="printToFileBtn">
+                <constraints/>
+                <properties>
+                  <background color="-7751195"/>
+                  <enabled value="true"/>
+                  <horizontalTextPosition value="0"/>
+                  <icon value="icons/printer1 34x36.png"/>
+                  <preferredSize width="45" height="34"/>
+                  <text value=""/>
+                  <toolTipText value="Print Results"/>
+                  <visible value="false"/>
+                </properties>
+              </component>
               <component id="cfcb" class="javax.swing.JButton" binding="BGMusicButton" default-binding="true">
                 <constraints/>
                 <properties>
@@ -672,11 +654,12 @@
                   <hideActionText value="false"/>
                   <horizontalAlignment value="0"/>
                   <icon value="icons/music2 icon 30x30.png"/>
-                  <preferredSize width="100" height="34"/>
+                  <preferredSize width="45" height="34"/>
                   <pressedIcon value="icons/no music2 icon 32x30.png"/>
                   <selected value="false"/>
                   <text value=""/>
                   <toolTipText value="Background Music"/>
+                  <visible value="false"/>
                 </properties>
               </component>
               <component id="6d4ec" class="javax.swing.JButton" binding="settingsButton" default-binding="true">
@@ -685,14 +668,30 @@
                   <background color="-7751195"/>
                   <enabled value="true"/>
                   <icon value="icons/settings icon 30x30.png"/>
-                  <preferredSize width="100" height="34"/>
+                  <preferredSize width="45" height="34"/>
                   <text value=""/>
                   <toolTipText value="Settings"/>
+                  <visible value="false"/>
+                </properties>
+              </component>
+              <component id="9aa6f" class="javax.swing.JButton" binding="leaderboardBtn">
+                <constraints/>
+                <properties>
+                  <background color="-7751195"/>
+                  <enabled value="true"/>
+                  <horizontalTextPosition value="0"/>
+                  <icon value="icons/Leader cup 34x50.png"/>
+                  <iconTextGap value="4"/>
+                  <inheritsPopupMenu value="false"/>
+                  <preferredSize width="45" height="34"/>
+                  <text value=""/>
+                  <toolTipText value="Leaderboard"/>
+                  <verifyInputWhenFocusTarget value="false"/>
                 </properties>
               </component>
             </children>
           </grid>
-          <grid id="3cfa" binding="profilePanel" layout-manager="GridBagLayout">
+          <grid id="3cfa" binding="profilePanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
             <constraints border-constraint="West"/>
             <properties>
               <background color="-1041"/>
@@ -700,32 +699,26 @@
             </properties>
             <border type="none"/>
             <children>
+              <component id="6722" class="javax.swing.JLabel" binding="profilePic">
+                <constraints/>
+                <properties>
+                  <preferredSize width="35" height="45"/>
+                  <text value=""/>
+                </properties>
+              </component>
               <component id="7792" class="javax.swing.JLabel" binding="profileName">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag top="0" left="5" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
-                </constraints>
+                <constraints/>
                 <properties>
                   <preferredSize width="165" height="35"/>
                   <text value=""/>
                 </properties>
               </component>
-              <component id="6722" class="javax.swing.JLabel" binding="profilePic">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag weightx="0.0" weighty="0.0"/>
-                </constraints>
-                <properties>
-                  <preferredSize width="35" height="50"/>
-                  <text value=""/>
-                </properties>
-              </component>
             </children>
           </grid>
-          <grid id="3e3f9" binding="topPanel" layout-manager="GridBagLayout">
+          <grid id="3e3f9" binding="timerPanel" layout-manager="GridBagLayout">
             <constraints border-constraint="Center"/>
             <properties>
-              <background color="-3290691"/>
+              <background color="-1041"/>
               <preferredSize width="370" height="45"/>
             </properties>
             <border type="none"/>
@@ -747,8 +740,8 @@
       <grid id="c6e32" binding="nextPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
         <constraints border-constraint="South"/>
         <properties>
-          <background color="-3290691"/>
-          <preferredSize width="800" height="44"/>
+          <background color="-1041"/>
+          <preferredSize width="800" height="45"/>
         </properties>
         <border type="none"/>
         <children>
@@ -759,6 +752,7 @@
               <enabled value="false"/>
               <preferredSize width="150" height="35"/>
               <text value="Next"/>
+              <visible value="false"/>
             </properties>
           </component>
         </children>
